fixed some dark mode elements; updated modal width and height; made modal css class more generic

--- a/assets/css/app-dark.css
+++ b/assets/css/app-dark.css
@@ -2,17 +2,23 @@ body.dark-mode {
   background-color: #000;
   color: #fff;
 }
+  body.dark-mode a {
+    color: #fff;
+  }
   body.dark-mode header,
   body.dark-mode button {
     color: #fff;
   }
+
   body.dark-mode .tile[data-state='tbd'] {
     border: 2px solid #fff;
     color: #fff
   }
-  body.dark-mode #keyboard-container button {
-    background-color: #888;
+
+  body.dark-mode section#game #mode-container .setting-row a {
+    color: #fff;
   }
+
   body.dark-mode section#game #guess-container #guess {
     color: #fff;
   }
@@ -22,3 +28,30 @@ body.dark-mode {
     body.dark-mode section#game #guess-container #guess.valid.first-guess {
       color: #3f9f1f;
     }
+
+  body.dark-mode #keyboard-container button {
+    background-color: #888;
+  }
+
+  body.dark-mode #settings .setting-row .text .description {
+    color: #aaa;
+  }
+
+  body.dark-mode .switch {
+    background-color: #888;
+  }
+    body.dark-mode .switch[data-status='true'] {
+      background-color: #529952;
+    }
+
+  body.dark-mode .modal-window {
+    background-color: #111;
+    border-color: #529952;
+  }
+  body.dark-mode .modal-text {
+    background-color: #111;
+    color: #fff;
+  }
+  body.dark-mode .modal-button-group {
+    background-color: #111;
+  }
