--- a/assets/css/debug.css
+++ b/assets/css/debug.css
@@ -11,10 +11,6 @@ section#game {
       background-color: #ffd3aa;
     }
 
-  section#game #score-container {
-    background-color: #f9ffaa;
-  }
-
   section#game #board-container {
     background-color: #ffc6c6;
   }
@@ -22,9 +18,16 @@ section#game {
       background-color: #c6c7ff;
     }
 
-  section#game #hint-container {
-    background-color: rgb(255, 176, 250);
+  section#game #score-container {
+    background-color: #f9ffaa;
   }
+
+  section#game #hint-container {
+    background-color: #ffb0fa;
+  }
+    section#game #hint-container button {
+      border: 1px solid #529952;
+    }
     section#game #hint-container #hint-arena {
-      background-color: rgb(235, 131, 155);
+      background-color: #eb839b;
     }
